refactor: use java 11 immutable collections where appropriate (#4209)